--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,14 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+# OpenSiv3D
+*.tlog
+*.lastbuildstate
+*.exe
+*.exp
+*.lib
+*.res
+*.idb
+QuaternaryView/App/AS_DEBUG/stats.txt
+QuaternaryView/App/QuaternaryView(debug_64-bit)_log.html
