--- a/QuaternaryView/QuaternaryView.vcxproj
+++ b/QuaternaryView/QuaternaryView.vcxproj
@@ -198,6 +198,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Object\Circle.cpp" />
+    <ClCompile Include="Object\CircleColider.cpp" />
+    <ClCompile Include="Object\RigidBody.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\engine\texture\box-shadow\128.png" />
@@ -261,6 +264,13 @@
   </ItemGroup>
   <ItemGroup>
     <Xml Include="App\example\test.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Calculation\eCalculationBackend.h" />
+    <ClInclude Include="Define.h" />
+    <ClInclude Include="Object\Circle.h" />
+    <ClInclude Include="Object\CircleColider.h" />
+    <ClInclude Include="Object\RigidBody.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
